[package]
name = "message"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
snow = "0.6"
base64 = "0.21"
dirs = "5.0"
bytes = "1"
clap = { version = "4", features = ["derive"] }