
[package]
name = "message"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"
rand = "0.8"
aes-gcm = "0.10.3"
rsa = "0.9"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"